# spelled-out-nn

./: .gitignore  pyproject.toml
language_modeling/: language_modeling.ipynb
micrograd/: data.py  draw_graph.py  micro_grad_scratch.ipynb
