[tool.poetry]
name = "spelled-out-nn"
version = "0.1.0"
description = ""
authors = ["Arunprakaash <prakaasharun50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.2.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
