[tool.poetry]
name = "spelled-out-nn"
version = "0.1.0"
description = ""
authors = ["Arunprakaash <prakaasharun50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
numpy = "^2.0.1"
matplotlib = "^3.9.1.post1"
graphviz = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
